--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "with-reasonml",
   "version": "1.0.0",
   "scripts": {
-    "dev": "concurrently \"bsb -clean-world -make-world -w\" \"next dev\"",
+    "dev": "next dev",
     "dev:reason": "bsb -clean-world -make-world -w",
     "dev:next": "next dev",
     "build": "bsb -clean-world -make-world && next build",
-    "start": "next start"
+    "start": "next start",
+    "buildTailwind": "tailwindcss build styles.css -o tailwind.css -c tailwind.config.js"
   },
   "license": "MIT",
   "dependencies": {
+    "bs-webapi": "^0.19.1",
     "next": "latest",
     "next-transpile-modules": "^4.0.2",
+    "re-classnames": "^5.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "reason-react": "^0.7.0"
+    "reason-react": "^0.7.0",
+    "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@dylanirlbeck/tailwind-ppx": "^0.8.2",
     "bs-platform": "^7.1.0",
     "concurrently": "^5.1.0"
   }
