Working prototype + GameCanvasPlayer + MenuBar

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@tippyjs/react": "^4.1.0",
     "bs-webapi": "^0.19.1",
     "next": "latest",
     "next-transpile-modules": "^4.0.2",
@@ -18,7 +19,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "reason-react": "^0.7.0",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "^1.8.10",
+    "tippy.js": "^6.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
