--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@dylanirlbeck/tailwind-ppx": "^0.8.2",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "bs-platform": "^7.1.0",
     "concurrently": "^5.1.0"
   }
